# common_tangent

./: .gitignore  README.md
draw/: Cargo.toml
draw/src/: main.rs
draw/src/draw/: mod.rs
lib/: Cargo.toml
lib/benches/: time.rs
lib/src/: aw.rs  ghs.rs  json.rs  lib.rs  melkmanns.rs
lib/src/polygon_generator/: grid.rs  katapiller.rs  mod.rs  new_edge_point.rs  poly_grid.rs  random_polygon.rs  random_polygonbox.rs
lib/src/util/: mod.rs
